-: fix battle mode for hover event, fix action z-index for battle mode

--- a/style.css
+++ b/style.css
@@ -558,7 +558,7 @@ a:hover {
 .tile-actions {
 	position: absolute;
 	right: 0;
-	z-index: 10;
+	z-index: 2;
 	//top: -16px;
 	top: 25%;
 	transform: translate(0, -50%);
